# pgarchive

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  test  test.yaml
src/: archive.rs  header.rs  io.rs  lib.rs  main.rs  tabledata.rs  toc.rs  types.rs
tests/: data_test.rs  header_test.rs  test.pgdump
