[package]
name = "pgarchive"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wichert/pgarchive"
repository = "https://github.com/wichert/pgarchive"
documentation = "https://docs.rs/pgarchive/"
description = "Read PostgreSQL custom format archives"
keywords = ["postgresql", "pgdump"]
categories = ["database"]
exclude = [".github"]

[lib]
name = "pgarchive"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
flate2 = "1.0.27"
thiserror = "1.0.49"

[dev-dependencies]
hex-literal = "0.4.1"
