[package]
name = "pgarchive"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wichert/pgarchive"
repository = "https://github.com/wichert/pgarchive"
documentation = "https://docs.rs/pgarchive/"
description = "Read PostgreSQL custom format archives"
keywords = ["postgresql", "pgdump"]
categories = ["database"]
exclude = [".github"]

[features]
tabledata = ["dep:pg_query", "dep:csv", "dep:serde"]

[lib]
name = "pgarchive"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
csv = { version = "1.3.0", optional = true }
flate2 = "1.0.27"
pg_query = { version = "0.8.2", optional = true }
serde = { version = "1.0.188", optional = true }
thiserror = "1.0.49"

[dev-dependencies]
hex-literal = "0.4.1"
